--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest app",
-    "create-db": "psql -f ./database/create-database.sql"
+    "create-db": "psql -f ./database/create-database.sql", 
+    "seed": "node ./database/seed-run.js"
   },
   "keywords": [],
   "author": "",
