--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest app",
     "create-db": "psql -f ./database/create-database.sql",
-    "seed": "node ./database/seed-run.js", 
+    "seed": "node ./database/seed-run.js",
     "dev": "nodemon listen.js"
   },
   "keywords": [],
@@ -16,10 +16,12 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "jest": "^30.2.0",
     "pg": "^8.16.3",
     "pg-format": "^1.0.4"
   },
   "devDependencies": {
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "supertest": "^7.1.4"
   }
 }
