testing shape and order of returned cases data

--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,11 @@
     "pg-format": "^1.0.4"
   },
   "devDependencies": {
+    "jest-sorted": "^1.0.15",
     "nodemon": "^3.1.11",
     "supertest": "^7.1.4"
-  }
+  },
+  "jest": {
+  "setupFilesAfterEnv": ["jest-sorted"]
+  } 
 }
