--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jest": "^30.2.0",
@@ -27,6 +28,8 @@
     "supertest": "^7.1.4"
   },
   "jest": {
-  "setupFilesAfterEnv": ["jest-sorted"]
-  } 
+    "setupFilesAfterEnv": [
+      "jest-sorted"
+    ]
+  }
 }
